dashboard/kubefiles/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dashboard-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard-vservice
spec:
  hosts:
  - "*"
  gateways:
  - dashboard-gateway
  http:
  - match:
    - uri:
        prefix: /backend/
    rewrite:
      uri: /
    route:
    - destination:
        host: backend
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard-frontend-vservice
spec:
  hosts:
  - "*"
  gateways:
  - dashboard-gateway
  http:
  - match:
    - uri:
        prefix: /dashboard
    route:
    - destination:
        host: dashboard
        port:
          number: 3000
